--- a/SupervisedML.ipynb
+++ b/SupervisedML.ipynb
@@ -7,8 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1FDcEoYhO30n9396ULzBDzEZ_rqLZgsmj",
-      "authorship_tag": "ABX9TyNQW994vFx8i4cB4HW6saqc",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyNQW994vFx8i4cB4HW6saqc"
     },
     "kernelspec": {
       "name": "python3",
@@ -16,16 +15,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/srilakshmikanagala/GRIPinternshipsupervisedML/blob/main/SupervisedML.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "metadata": {
